{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 207,
  "lineage": "0d9d3091-3c08-1ce4-7782-54c8ae9baefe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "aidlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:291262521249:loadbalancer/aidLB",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "aidLB-2031116123.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "aidLB",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "aidLB",
            "security_groups": [
              "sg-0559f93ff638b4ab3"
            ],
            "source_security_group": "291262521249/default",
            "source_security_group_id": "sg-0559f93ff638b4ab3",
            "subnets": [
              "subnet-01bde12e18b1a2b25"
            ],
            "tags": {
              "Name": "terraformLB"
            },
            "tags_all": {
              "Name": "terraformLB"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.my-public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291262521249:internet-gateway/igw-0a8b8f97b3d864f0e",
            "id": "igw-0a8b8f97b3d864f0e",
            "owner_id": "291262521249",
            "tags": {
              "Name": "aidana-igw"
            },
            "tags_all": {
              "Name": "aidana-igw"
            },
            "vpc_id": "vpc-06d2c116d74788c55"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aidlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:291262521249:targetgroup/aid-target-group/b1d7a8c91e1da3dd",
            "arn_suffix": "targetgroup/aid-target-group/b1d7a8c91e1da3dd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:291262521249:targetgroup/aid-target-group/b1d7a8c91e1da3dd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "aid-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d2c116d74788c55"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291262521249:route-table/rtb-02b04c8fb09bc417b",
            "id": "rtb-02b04c8fb09bc417b",
            "owner_id": "291262521249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8b8f97b3d864f0e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aidana-main-rbt"
            },
            "tags_all": {
              "Name": "aidana-main-rbt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d2c116d74788c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a988a13c8bd876c8",
            "route_table_id": "rtb-02b04c8fb09bc417b",
            "subnet_id": "subnet-01bde12e18b1a2b25"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.main-rtb",
            "aws_subnet.my-public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_and_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291262521249:security-group/sg-0e967647b5cc138b6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e967647b5cc138b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030a04dc0bbb52c77"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "instance_sg20230315125433857400000002",
            "name_prefix": "instance_sg",
            "owner_id": "291262521249",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "amazon-linux-2-sg"
            },
            "tags_all": {
              "name": "amazon-linux-2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d2c116d74788c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291262521249:security-group/sg-030a04dc0bbb52c77",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030a04dc0bbb52c77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg20230315125428756000000001",
            "name_prefix": "lb_sg",
            "owner_id": "291262521249",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "lb-sg"
            },
            "tags_all": {
              "name": "lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d2c116d74788c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291262521249:subnet/subnet-08bee09019eea3048",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bee09019eea3048",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291262521249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aidana-subnet-2"
            },
            "tags_all": {
              "Name": "aidana-subnet-2"
            },
            "vpc_id": "vpc-06d2c116d74788c55"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291262521249:subnet/subnet-01bde12e18b1a2b25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bde12e18b1a2b25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291262521249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aidana-subnet-1"
            },
            "tags_all": {
              "Name": "aidana-subnet-1"
            },
            "vpc_id": "vpc-06d2c116d74788c55"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291262521249:vpc/vpc-06d2c116d74788c55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0208c9d0d9633c22d",
            "default_route_table_id": "rtb-0abce6238b38bcf33",
            "default_security_group_id": "sg-0559f93ff638b4ab3",
            "dhcp_options_id": "dopt-0e1e7eb505b07e19e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d2c116d74788c55",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abce6238b38bcf33",
            "owner_id": "291262521249",
            "tags": {
              "Name": "aidana-vpc"
            },
            "tags_all": {
              "Name": "aidana-vpc"
            }
          }
        }
      ]
    }
  ]
}